In-Reader Reading Plans: Calendar for subscriptions, devotional sidebar, and styling.
Removing users index from reading plans for now, documenting legacy reading plan urls we need to support.

Settings and Calendar sidebars.

Initial integration pass for reader + sidebar reference links and checkboxes.

Adding devotional sidebar.

Active style for current reading content link.

Better markup and styling for ref content sidebar links.

Moving reader header into reader partial.  Attempt to move towards encapsulating all reader functionality and markup.

--- a/app/assets/stylesheets/_progress_bars.sass
+++ b/app/assets/stylesheets/_progress_bars.sass
@@ -95,3 +95,20 @@
 
 .progress_percent_complete small
   font-size: 10px
+
+// Widget sidebar overrides
+.widget .progress_wrap
+  margin-bottom: 0
+  margin: 10px
+
+.widget .progress_counter
+  width: 100px
+
+.widget .progress_bar_outer
+  margin-right: 100px
+
+.widget .progress_bar_cap
+  right: 104px
+
+.widget .progress_bar_shadow
+  right: 106px
