--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -1,6 +1,11 @@
 // `Widgets
 //----------------------------------------------------------------------------------------------------
 
+.widget h2
+  font-size: 16px
+  margin: 20px 20px 10px 20px
+  font-weight: 500
+
 .widget ul,
 .widget section,
 .widget aside,
@@ -287,7 +292,7 @@ a.more_arrow:hover
 .parallel_notes .pop_out_button:hover
   +background-image(linear-gradient(#f1efec, #e0dedb))
   background-color: #ccc
-.parallel_notes .pop_out_button:active 
+.parallel_notes .pop_out_button:active
   +glow
   +background-image(linear-gradient(#d0cdca, #f1efec))
   background-color: #eee
@@ -303,17 +308,17 @@ a.more_arrow:hover
   height: 25px
   margin: 0px 0px 10px 0px
   width: 100%
-.parallel_notes textarea 
+.parallel_notes textarea
   height: 200px
 .parallel_notes select
   width: 100%
   margin: 5px 0px
 
-.parallel_notes_submit 
+.parallel_notes_submit
   padding: 0px 15px
-#sidebar .parallel_notes .action_button_green 
+#sidebar .parallel_notes .action_button_green
   min-width: 100px
-  +border-radius(16px) 
+  +border-radius(16px)
   box-shadow: inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #bbbabd 0 0 0 5px
   font-size: 13px
   margin-top: 10px
@@ -324,10 +329,10 @@ a.more_arrow:hover
   color: #676767
   font-size: 13px
   text-decoration: underline
-  
-#sidebar .parallel_notes .color_picker_list a 
+
+#sidebar .parallel_notes .color_picker_list a
   box-shadow: 1px 1px 0px #bbbabd, inset 0px 1px #fff
-  
+
 #sidebar .parallel_notes .color_picker_list
   box-shadow: 0px 1px #bbbabd, 0px 2px #fff
   padding: 0px 0px 10px 0px
