--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -1,4 +1,9 @@
-%article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-setting-trans-notes" => @trans_notes, "data-setting-cross-refs" => @cross_refs, "data-setting-show-highlights" => @show_highlights, "data-selected-verses" => @verses.join(","), "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s.downcase, "data-book-api" => @reference[:book].sub(/[A-Z]+/) {|m| m.downcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
+- @reader_menus = true
+
+= render partial: "/references/reader_header"
+= render partial: "/references/js"
+
+%article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-selected-verses" => @verses.try(:join,","), "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s.downcase, "data-book-api" => @reference[:book].sub(/[A-Z]+/) {|m| m.downcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   %div.nav_items
     - direction = 'rtl' if @version.try(:rtl?)
     = link_to("previous", bible_path(@reference.previous_chapter), class: "nav_prev #{direction}") if @reference.previous_chapter
@@ -10,6 +15,7 @@
                      "data-usfm" => @reference.chapter_usfm,
                      class: @alt_version.try(:text_direction)}
     = t('ref.loading secondary')
+
 %footer
   - if @version.has_publisher?
     .publisher.as_table
@@ -19,3 +25,22 @@
         .blurb= (@version.blurb || @version.copyright).try :html_safe
       .vcenter
         =link_to t('versions.learn more'), @version.url || version_path(@version), class: 'button'
+
+- if @reader_menus == true
+  = render_cell :book_selector, :display, {version: @version}
+  = render_cell :version_selector, :display, {version: @version, recent_versions: recent_versions, reference: @reference, site: @site}
+  = render '/shared/modal_single_verse' unless @verse_modals == false
+  = render '/shared/menu_settings'
+  = render '/shared/menu_audio_player'
+
+- version = {abbreviation: @version.abbreviation.downcase, id: @version.to_param }
+- version[:books] = {}
+- @version.books.each do |book_usfm, book_info|
+  - chapters = @version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm.downcase, canon: c.canonical }}
+  - version[:books][book_usfm.downcase] = {human: book_info.human, chapters: chapters }
+
+/ Json representation of our version. Currently used for building our dynamic chapter grid menu.
+/ This will be cached along with the entire template
+%script
+  :plain
+    version_json = #{version.to_json.html_safe};
