--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -16,7 +16,11 @@
   = render_cell :notes_list_widget, :stub, title: t("notes.community notes"), reference: @reference
   = render '/shared/widget_ad_bible_app'
 
-= render partial: 'reader_header'
 = render 'reader'
 
 = render partial: "js"
+
+%footer
+  %p
+    %b= link_to t("ref.about the version", version: @version), version_path(@version)
+  %p= @reference.copyright.html_safe if @reference.copyright
