--- a/app/views/subscriptions/_plan_day_header.html.haml
+++ b/app/views/subscriptions/_plan_day_header.html.haml
@@ -7,7 +7,7 @@
       %dd
         = link_to t("plans.settings"), user_subscription_path(current_user,@subscription), class: "icon_settings"
       %dd
-        = link_to t("plans.month"), plan_calendar_path(@subscription)
+        = link_to t("plans.month"), calendar_user_subscription_path(current_user,@subscription)
   - else
     - if current_auth
       %div= link_to(t('plans.subscribe to plan'), plan_start_path(@subscription.to_param), :class => 'action_button_green', style: "min-width: 140px; margin-bottom: 19px")
