--- a/app/views/pages/error_404.html.haml
+++ b/app/views/pages/error_404.html.haml
@@ -5,4 +5,5 @@
 %article.error
   %h2= t('app errors.404 message').html_safe
   %hr
-  %p= t('app errors.404 explanation', support_url: external_url(:support), reader_path: bible_path).html_safe
+  / sending requested path until tr8n teams update string, delete param once completed
+  %p= t('app errors.404 explanation', requested_path: params[:path], support_url: external_url(:support), reader_path: bible_path).html_safe
