initial working version of AJAX alt reference

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -18,8 +18,12 @@
     = link_to("next", bible_path(@reference.next_chapter), class: "nav_next #{direction}") if @reference.next_chapter
   #version_primary{"data-reference" => @reference.to_param, "data-abbreviation" => @version.try(:abbreviation).downcase, class: @version.try(:text_direction)}
     = @reference.content.html_safe if @reference.content
-  #version_secondary{"data-reference" => @alt_reference.to_param, "data-abbreviation" => @alt_version.try(:abbreviation).downcase, class: @alt_version.try(:text_direction)}
-    = @alt_reference.content.html_safe if @alt_reference.content
+  #version_secondary{"data-reference" => @alt_reference.to_param,
+                     "data-abbreviation" => @alt_version.try(:abbreviation).downcase,
+                     "data-usfm" => @alt_reference.chapter_usfm,
+                     "data-404-content" => "<h1>#{t('ref.invalid chapter title')}</h1> <p>#{t('ref.invalid chapter text')}</p>",
+                     class: @alt_version.try(:text_direction)}
+    = t('ref.loading secondary')
 
 %footer
   %p
