--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,4 +1,4 @@
-= cache "head_meta_#{@site}", expires_in: 3.minutes do
+= cache "head_meta_#{@site}", expires_in: a_short_time do
   %meta{:charset => 'utf-8'}
   %meta{'http-equiv' => 'x-ua-compatible', :content => 'ie=edge, chrome=1'}
   %meta{property: "og:image", content: "#{url_for(asset_path('app-icon-english-512x512.png'))}"}
