--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -602,8 +602,12 @@ article[data-setting-size="user_setting_size_large"] .verse > .label
 .em, .bd
   font-weight: normal
 
-.it
+.it, .cd
   font-style: italic
+
+.d
+  font-style: italic
+  margin-bottom: 1em
 
 .bdit
   font-weight: bold
