--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,6 +19,7 @@
 @import header
 @import nav_primary
 @import main_reader
+@import reader_text
 @import user_settings
 @import progress_bars
 @import split_pane
