Found a q3 class in one of the poetry books.

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -56,6 +56,12 @@
 .q2 + .ms,
 .q2 + .m1,
 .q2 + .m2,
+.q3 + .s,
+.q3 + .s1,
+.q3 + .s2,
+.q3 + .ms,
+.q3 + .m1,
+.q3 + .m2,
 .imt + .is1,
 .ip + .is1,
 .io1 + .is1,
