In-Reader Reading Plans: ClientSettings abstraction + more Reader and js cleanup.
Adding missing ClientSettings file.

Integration testing for new Subscription, minor copy updates for catching up, etc.

Adding integration tests for reference-less days and devotionals.

Bringing in previous bug fixes for parallel mode and fullscreen mode + css fix.

Devotional in sidebar widget.

Prev & Next navigation.

Mute + Focused styling and new scrolling.

Copy change for reading view notice.

Updating client settings with trans notes, cross refs and highlights.

Proper version

don't fail if no sidebar_presenter is defined

--- a/app/assets/stylesheets/_global_html.sass
+++ b/app/assets/stylesheets/_global_html.sass
@@ -45,6 +45,9 @@ small,
 .mute a:hover
   color: $body_text
 
+.mute .focused
+  color: $body_text
+
 .callout
   background:
     image: image-url("callout.png")
