--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -62,7 +62,9 @@
   line-height: 23px
   padding: 5px 20px
 
-.widget header,
+.widget header
+  padding: 5px 15px 5px 20px
+
 #main header,
 .header_tabs
   +round_top
