--- a/app/assets/stylesheets/_vars.sass
+++ b/app/assets/stylesheets/_vars.sass
@@ -32,11 +32,18 @@ $reader_line_height: 2em
 =round_top_left
   +border-top-left-radius($radius)
 
+=round_bottom_left
+  +border-bottom-left-radius($radius)
+
 =round_bottom
   +border-bottom-radius($radius)
 
 =round_bottom_right
   +border-bottom-right-radius($radius)
+
+=round_top_right
+  +border-top-right-radius($radius)
+
 
 =round_none
   +border-radius(0)
