--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,4 +1,4 @@
-= render "sidebar"
+= render "/sidebars/notes/show"
 
 %article
   #note
@@ -17,6 +17,6 @@
         - if current_auth && (current_auth.user_id.to_i == @note.user_id.to_i)
           %span= link_to('Edit', edit_note_path(@note.id))
           &mdash;
-          %span.confirm= link_to('Delete', note_path(@note.id), "data-confirm-text" => t("bookmarks.confirm delete"), :method => :delete) 
+          %span.confirm= link_to('Delete', note_path(@note.id), "data-confirm-text" => t("bookmarks.confirm delete"), :method => :delete)
           &mdash;
         %span.created_as_date= t('created ago', time_ago: time_ago_in_words(@note.created_as_date))
