--- a/app/views/shared/_menu_settings.html.haml
+++ b/app/views/shared/_menu_settings.html.haml
@@ -14,15 +14,15 @@
         %label.user_setting_font_helvetica{:for => 'radio_helvetica'}
           = t('.font1')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_georgia', :type => 'radio', :name => 'user_setting_font', :id => 'radio_georgia', :value => 'Georgia', :checked => ('checked' if @font == "user_setting_font_georgia")}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_georgia', :type => 'radio', :name => 'user_setting_font', :id => 'radio_georgia', :value => 'Georgia', :checked => ('checked' if client_settings.reader_font == "user_setting_font_georgia")}
         %label.user_setting_font_georgia{:for => 'radio_georgia'}
           = t('.font2')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_baskerville', :type => 'radio', :name => 'user_setting_font', :id => 'radio_baskerville', :value => 'Baskerville', :checked => ('checked' if @font == "user_setting_font_baskerville")}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_baskerville', :type => 'radio', :name => 'user_setting_font', :id => 'radio_baskerville', :value => 'Baskerville', :checked => ('checked' if client_settings.reader_font == "user_setting_font_baskerville")}
         %label.user_setting_font_baskerville{:for => 'radio_baskerville'}
           = t('.font3')
       %span.float_left.width_50
-        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_verdana', :type => 'radio', :name => 'user_setting_font', :id => 'radio_verdana', :value => 'Verdana', :checked => ('checked' if @font == "user_setting_font_verdana")}
+        %input.radio_user_setting{'data-setting-font' => 'user_setting_font_verdana', :type => 'radio', :name => 'user_setting_font', :id => 'radio_verdana', :value => 'Verdana', :checked => ('checked' if client_settings.reader_font == "user_setting_font_verdana")}
         %label.user_setting_font_verdana{:for => 'radio_verdana'}
           = t('.font4')
     %fieldset.clearfix
@@ -34,11 +34,11 @@
         %label{:for => 'user_setting_size_small'}
           = t('.small')
       %span.float_left.width_33
-        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_medium', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_medium', :checked => ('checked' if @size=="user_setting_size_medium")}
+        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_medium', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_medium', :checked => ('checked' if client_settings.reader_font_size=="user_setting_size_medium")}
         %label{:for => 'user_setting_size_medium'}
           = t('.medium')
       %span.float_left.width_33
-        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_large', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_large', :checked => ('checked' if @size=="user_setting_size_large")}
+        %input.radio_user_setting{'data-setting-size' => 'user_setting_size_large', :type => 'radio', :name => 'user_setting_size', :id => 'user_setting_size_large', :checked => ('checked' if client_settings.reader_font_size=="user_setting_size_large")}
         %label{:for => 'user_setting_size_large'}
           = t('.large')
     %fieldset.clearfix
@@ -46,16 +46,16 @@
         %b
           = t('.extras')
       %span.float_left.width_50
-        %input.checkbox_user_setting{type:"checkbox", name: "user_setting_trans_notes", :id => 'user_setting_trans_notes', :checked => ('checked' if @trans_notes == "true")}
+        %input.checkbox_user_setting{type:"checkbox", name: "user_setting_trans_notes", :id => 'user_setting_trans_notes', :checked => ('checked' if client_settings.reader_trans_notes == "true")}
         %label{for: 'user_setting_trans_notes'}
           = t('.translation notes')
       %span.float_left.width_50
-        %input.checkbox_user_setting{type:"checkbox", name: "user_setting_cross_refs", id: 'user_setting_cross_refs', :checked => ('checked' if @cross_refs == "true")}
+        %input.checkbox_user_setting{type:"checkbox", name: "user_setting_cross_refs", id: 'user_setting_cross_refs', :checked => ('checked' if client_settings.reader_cross_refs == "true")}
         %label{for: 'user_setting_cross_refs'}
           = t('.cross references')
       - if current_auth
         %span.float_left.width_50
-          %input.checkbox_user_setting{type:"checkbox", name: "user_setting_show_highlights", id: 'user_setting_show_highlights', :checked => ('checked' if @show_highlights == "true")}
+          %input.checkbox_user_setting{type:"checkbox", name: "user_setting_show_highlights", id: 'user_setting_show_highlights', :checked => ('checked' if client_settings.reader_highlights == "true")}
           %label{for: 'user_setting_show_highlights'}
             = t('.highlights')
     %fieldset.clearfix{style: "display: none"}
