--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -1,37 +1,36 @@
-- if @single_verse
-  - content_for :javascripts do
-    %script
-      :plain
-        var modal = new VerseModal();
+- verse = modal_verse
+- content_for :javascripts do
+  %script
+    :plain
+      var modal = new VerseModal();
 
-#modal_single_verse
-  #modal_overlay &nbsp;
-  #modal_window
-    - if @single_verse
-      %header
-        %b= @single_verse.human
-        - if @version
-          %span.separator |
-          = @version
-        &nbsp;
+#modal_single_verse.modal
+  #modal_overlay.overlay &nbsp;
+  #modal_window.window
+    %header
+      %b= verse.human
+      - if version
+        %span.separator |
+        = version
+      &nbsp;
 
-        %a.close{:href => '#'} Close
-      %section
-        %p.big= @single_verse.content.html_safe
-        %hr
-        %p
-          - if @reference
-            %a#single_verse_read_link.action_button_green{:href => bible_path(@reference)}= t("read reference", reference: @reference.human)
-      %aside
-        %div{style: "height: 36px;"}
-          %a{href: "http://twitter.com/share", class: "twitter-share-button", "data-url" => @single_verse.short_link, "data-counturl" => request.url, "data-text" => @single_verse.content[0].chomp, via: "YouVersion", "data-count" => "horizontal", "data-related" => "youversion"} Tweet
-          %script{type: "text/javascript", src: "http://platform.twitter.com/widgets.js"}
-        %div{style: "height: 40px;"}
-          %a{name: "fb_share", class: "fb_iframe_widget", type: "button_count", href: "http://www.facebook.com/sharer.php"} Share
-          %script{src: "http://static.ak.fbcdn.net/connect.php/js/FB.Share", type: "text/javascript"}
-        %div{style: "height: 40px;"}
-          %g:plusone{size: "medium"}
-          :javascript
-            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-            po.src = 'https://apis.google.com/js/plusone.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      %a.close{:href => '#'} Close
+    %section
+      %p.big= verse.content.html_safe
+      %hr
+      %p
+        - if reference
+          %a#single_verse_read_link.action_button_green{:href => bible_path(reference)}= t("read reference", reference: reference.human)
+    %aside
+      %div{style: "height: 36px;"}
+        %a{href: "http://twitter.com/share", class: "twitter-share-button", "data-url" => verse.short_link, "data-counturl" => request.url, "data-text" => verse.content[0].chomp, via: "YouVersion", "data-count" => "horizontal", "data-related" => "youversion"} Tweet
+        %script{type: "text/javascript", src: "http://platform.twitter.com/widgets.js"}
+      %div{style: "height: 40px;"}
+        %a{name: "fb_share", class: "fb_iframe_widget", type: "button_count", href: "http://www.facebook.com/sharer.php"} Share
+        %script{src: "http://static.ak.fbcdn.net/connect.php/js/FB.Share", type: "text/javascript"}
+      %div{style: "height: 40px;"}
+        %g:plusone{size: "medium"}
+        :javascript
+          var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+          po.src = 'https://apis.google.com/js/plusone.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
